compiler/testData/diagnostics/tests/regressions/TypeParameterAsASupertype.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
class A<T> : <!SUPERTYPE_NOT_A_CLASS_OR_INTERFACE!>T<!> {}